feat: finish contentlayer setup with dummy example

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,3 +9,22 @@ body {
   font-family: "Inter", sans-serif;
   font-family: "Space Grotesk", sans-serif;
 }
+
+pre > code {
+  display: grid;
+}
+
+/* code {
+  counter-reset: step;
+  counter-increment: step 1;
+}
+
+code .line::before {
+  content: counter(step);
+  counter-increment: step;
+  width: 1rem;
+  margin-right: 1.5rem;
+  display: inline-block;
+  text-align: right;
+  color: rgba(115, 138, 148, 0.4);
+} */
